docs: Fix vertical collapse

--- a/src/pages/Documentation/Documentation.sass
+++ b/src/pages/Documentation/Documentation.sass
@@ -1,7 +1,5 @@
 .documentation
-    display: flex
-    flex-direction: column
-    flex-grow: 1
+    width: 100%
     padding: 0 30px 30px
     min-width: 0
     overflow: hidden
